--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   "devDependencies": {
     "nwb": "0.23.x",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "styled-components": "3.3.3"
+    "react-dom": "^16.5.2"
   },
   "author": "",
   "homepage": "",
