--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "styled-components": "3.3.3"
   },
   "devDependencies": {
+    "eslint-config-standard-jsx": "^6.0.2",
+    "eslint-plugin-babel": "^5.2.1",
+    "eslint-plugin-react": "^7.11.1",
     "nwb": "0.23.x",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   },
   "author": "",
-  "homepage": "",
   "license": "MIT",
   "repository": "",
   "keywords": [
